--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^8.0.1",
     "@mantine/hooks": "^8.0.1",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
