--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^8.0.1",
     "@mantine/hooks": "^8.0.1",
+    "@mantine/notifications": "^8.0.2",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
