Recolored Drone Model, Implemented Selection Effect

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "@mantine/notifications": "^8.0.2",
     "@react-three/drei": "^10.1.2",
     "@react-three/fiber": "^9.1.2",
+    "@react-three/postprocessing": "^3.0.4",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "postprocessing": "^6.37.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.1",
